# set09121_labs

./: .gitmodules  CMakeLists.text  CMakeLists.txt  CmakeLists.txt  main.cpp
practical_1/: CMakeLists.rtf  CMakeLists.txt  main.cpp
practical_1_pong/: main.cpp
practical_2/: main.cpp  pong.cpp
